# archviz_ai

./: .gitignore  README.md  pyproject.toml
archviz_app/: main.py
archviz_app/core/: job_builder.py  prompt_builder.py
archviz_app/models/: render_job.py
archviz_app/services/: gemini_client.py  render_service.py
archviz_app/ui/: exterior_tab.py  interior_tab.py  main_window.py  widgets.py
archviz_app/utils/: file_utils.py  qt_async.py
docs/: ARCHITECTURE.md  README_DEPLOY_KEY.md
tests/: test_smoke.py
